sjekk om adresse gyldighet er innenfor lovalgsperiode